tests/rosetta/out/Dart/balanced-ternary.error
run error: exit status 254
../../tests/rosetta/out/Dart/balanced-ternary.dart:142:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:130:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:10:13: Error: Type 'any' not found.
Map<String, any> btString(String s) {
            ^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:4:98: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
  while (i.toString().compareTo(s.length.toString()) < 0 && s.toString().substring(i, (i as num) + 1) == '0') {
                                                                                                 ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:5:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:15:51: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = s.toString().substring(i, (i as num) + 1);
                                                  ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:32:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) - 1;
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:56:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) - 1;
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:69:31: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
    n = int.parse(((n as num) / 3));
                              ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:72:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      n = (n as num) + 1;
                     ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:77:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
        n = (n as num) - 1;
                       ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:80:27: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
    b = List.from(b)..add(m);
                          ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:90:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    r = (r as num) + (b[i] * (pt as num) as num);
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:91:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    pt = (pt as num) * 3;
                     ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:92:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:102:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:126:7: Error: 'is' can't be used as an identifier because it's a keyword.
Try renaming this to be an identifier that isn't a keyword.
  var is = padLeft(btToInt(b).toString(), 7);
      ^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:127:30: Error: Expected an identifier, but got 'is'.
Try inserting an identifier before 'is'.
  print(l + ' ' + bs + ' ' + is);
                             ^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:127:32: Error: Expected a type, but got ')'.
  print(l + ' ' + bs + ' ' + is);
                               ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:127:32: Error: This couldn't be parsed.
  print(l + ' ' + bs + ' ' + is);
                               ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:143:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/balanced-ternary.dart:167:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:196:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:201:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/balanced-ternary.dart:205:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
